# ROS-ROS2-repo

./: README.md
Basics/: publisher mindmap.drawio.html  publisher.cpp
Projects/3dof_rehab_arm/: log.txt  terminal_log.txt  terminal_log2.txt
Projects/3dof_rehab_arm/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Projects/3dof_rehab_arm/install/can_odrive_interface/lib/can_odrive_interface/: position_node  read_encoder_node  torque_node  velocity_node
Projects/3dof_rehab_arm/install/can_odrive_interface/share/ament_index/resource_index/parent_prefix_path/: can_odrive_interface
Projects/3dof_rehab_arm/install/can_odrive_interface/share/can_odrive_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Projects/3dof_rehab_arm/install/can_odrive_interface/share/can_odrive_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
Projects/3dof_rehab_arm/install/rehab_arm_robot/share/ament_index/resource_index/package_run_dependencies/: rehab_arm_robot
Projects/3dof_rehab_arm/install/rehab_arm_robot/share/rehab_arm_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Projects/3dof_rehab_arm/install/rehab_arm_robot/share/rehab_arm_robot/cmake/: rehab_arm_robotConfig.cmake
Projects/3dof_rehab_arm/install/rehab_arm_robot/share/rehab_arm_robot/meshes/: shoulder_link.STL  upper_arm_link.STL
Projects/3dof_rehab_arm/install/rehab_arm_robot/share/rehab_arm_robot/urdf/: rehab_arm_robot.csv
Projects/3dof_rehab_arm/install/rehab_arm_robot_control/lib/rehab_arm_robot_control/: planning  state_reader
Projects/3dof_rehab_arm/install/rehab_arm_robot_control/share/ament_index/resource_index/package_run_dependencies/: rehab_arm_robot_control
Projects/3dof_rehab_arm/install/rehab_arm_robot_control/share/rehab_arm_robot_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Projects/3dof_rehab_arm/install/rehab_arm_robot_hardware_interface/include/rehab_arm_robot_hardware_interface/rehab_arm_robot_hardware_interface/: odrive_hardware_interface.hpp
Projects/3dof_rehab_arm/install/rehab_arm_robot_hardware_interface/share/ament_index/resource_index/package_run_dependencies/: rehab_arm_robot_hardware_interface
Projects/3dof_rehab_arm/install/rehab_arm_robot_hardware_interface/share/rehab_arm_robot_hardware_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Projects/3dof_rehab_arm/install/rehab_arm_robot_hardware_interface/share/rehab_arm_robot_hardware_interface/cmake/: export_odrive_hardware_interfaceExport.cmake  rehab_arm_robot_hardware_interfaceConfig.cmake
Projects/3dof_rehab_arm/install/rehab_arm_robot_moveit_config/share/ament_index/resource_index/package_run_dependencies/: rehab_arm_robot_moveit_config
Projects/3dof_rehab_arm/install/rehab_arm_robot_moveit_config/share/rehab_arm_robot_moveit_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Projects/3dof_rehab_arm/install/rehab_arm_robot_moveit_config/share/rehab_arm_robot_moveit_config/config/: initial_positions.yaml  rehab_arm_robot.ros2_control.xacro  rehab_arm_robot.srdf  rehab_arm_robot.urdf.xacro
Projects/3dof_rehab_arm/install/rehab_arm_robot_moveit_config/share/rehab_arm_robot_moveit_config/launch/: demo.launch.py  demo_with_controller.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
Projects/3dof_rehab_arm/log/: latest_build
Projects/3dof_rehab_arm/src/: README.md
Projects/3dof_rehab_arm/src/can_odrive_interface/: CMakeLists.txt  README.md  package.xml
Projects/3dof_rehab_arm/src/can_odrive_interface/include/can_odrive_interface/: odrive_interface.hpp
Projects/3dof_rehab_arm/src/can_odrive_interface/src/: odrive_interface.cpp
Projects/3dof_rehab_arm/src/can_odrive_interface/test/: test_position.cpp  test_read_encoder.cpp  test_torque.cpp  test_velocity.cpp
Projects/3dof_rehab_arm/src/rehab_arm_robot/: CMakeLists.txt  package.xml
Projects/3dof_rehab_arm/src/rehab_arm_robot/config/: joint_names_rehab_arm_robot.yaml
Projects/3dof_rehab_arm/src/rehab_arm_robot/launch/: display.launch  gazebo.launch
Projects/3dof_rehab_arm/src/rehab_arm_robot/meshes/: base_link.STL  fake_hand_link.STL  lower_arm_link.STL
Projects/3dof_rehab_arm/src/rehab_arm_robot/urdf/: rehab_arm_robot.urdf  rehab_arm_robot.urdf.xacro
Projects/3dof_rehab_arm/src/rehab_arm_robot_control/: CMakeLists.txt  package.xml
Projects/3dof_rehab_arm/src/rehab_arm_robot_control/src/: planning.cpp  state_reader.cpp
Projects/3dof_rehab_arm/src/rehab_arm_robot_hardware_interface/: CMakeLists.txt  odrive_hardware_interface.xml
Projects/3dof_rehab_arm/src/rehab_arm_robot_hardware_interface/include/rehab_arm_robot_hardware_interface/: odrive_joint.hpp
Projects/3dof_rehab_arm/src/rehab_arm_robot_hardware_interface/src/: odrive_hardware_interface.cpp
Projects/3dof_rehab_arm/src/rehab_arm_robot_moveit_config/: CMakeLists.txt
Projects/3dof_rehab_arm/src/rehab_arm_robot_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  rehab_arm_robot.srdf  ros2_controllers.yaml
Projects/3dof_rehab_arm/src/rehab_arm_robot_moveit_config/launch/: bringup.launch.py  bringup2.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
